# LR6

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  MEthods.cpp  Makefile  Task2.cpp  Task3.cpp  Tasks.cpp  cmake_install.cmake  googletest.cpp  main  main.cpp  onlyFunc.cpp  task  tests  tests.h  русский.cpp
Testing/Temporary/: CTestCostData.txt
